--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -18,6 +18,12 @@
     margin-right: 8px;
   }
 
+  &.outlined {
+    background: #fff;
+    border: 1px solid #835afd;
+    color: #835afd;
+  }
+
   // Efeito hover aplicado apenas se o elemento estiver desabilitado
   &:not(:disabled):hover {
     filter: brightness(0.9);
